# solite

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  Cargo.toml  Makefile  PLAN-multipart.md  PLAN.md  README.md  TODO.md  bench.sh  dist-workspace.toml  script.ipynb
crates/solite-analyzer/: AGENTS.md  Cargo.toml
crates/solite-analyzer/src/: lib.rs  symbols.rs
crates/solite-analyzer/src/rules/: config.rs  double_quoted.rs  empty_blob.rs  missing_as.rs  mod.rs  suppressions.rs
crates/solite-cli/: AGENTS.md  Cargo.toml  pyproject.toml
crates/solite-cli/benches/: tui.rs
crates/solite-cli/src/: bench.rs  cli.rs  colors.rs  docs.rs  errors.rs  lib.rs  main.rs  repl.rs  run.rs  snapshot-modules-report.sql  snapshot.rs  ui.rs
crates/solite-cli/src/commands/: backup.rs  bench.rs  codegen.rs  dbhash.rs  dbtotxt.rs  diff.rs  docs.rs  exec.rs  expert.rs  fmt.rs  lint.rs  lsp.rs  mcp.rs  mod.rs  query.rs  repl.rs  rsync.rs  run.rs  schema.rs  serve.rs  sqlite3.rs  stream.rs  vacuum.rs
crates/solite-cli/src/jupyter/: server.rs
crates/solite-cli/src/themes/: mod.rs
crates/solite-completion/: AGENTS.md  Cargo.toml
crates/solite-completion/src/: context.rs  engine.rs  items.rs  lib.rs  schema.rs
crates/solite-core/: AGENTS.md  Cargo.toml
crates/solite-core/benches/: sqlite.rs
crates/solite-core/src/: dot.rs  exporter.rs  lib.rs  load_uv.rs  object_store.rs  procedure.rs  replacement_scans.rs  rpc.rs  sqlite.rs
crates/solite-core/src/dot/: ask.rs  bench.rs  call.rs  clear.rs  dotenv.rs  env.rs  export.rs  graphviz.rs  help.rs  load.rs  mod.rs  open.rs  param.rs  print.rs  run.rs  schema.rs  sh.rs  stream.rs  tables.rs  tui.rs  vegalite.rs
crates/solite-core/src/snapshots/: solite_core__tests__core_basic-2.snap  solite_core__tests__core_basic-3.snap  solite_core__tests__core_basic.snap  solite_core__tests__snap-2.snap  solite_core__tests__snap-3.snap  solite_core__tests__snap.snap  solite_core__tests__sqlite_version.snap  solite_core__tests__step-0.snap  solite_core__tests__step-1.snap  solite_core__tests__step-2.snap  solite_core__tests__step-3.snap  solite_core__tests__step-4.snap  solite_core__tests__step-5.snap  solite_core__tests__step-6.snap
crates/solite-core/tests/: rpc_integration.rs
crates/solite-fmt/: AGENTS.md  Cargo.toml
crates/solite-fmt-wasm/: AGENTS.md  Cargo.toml  index.html  test.ts
crates/solite-fmt-wasm/src/: lib.rs
crates/solite-fmt/src/: comment.rs  config.rs  ignore.rs  lib.rs  main.rs  printer.rs  tests.rs
crates/solite-fmt/src/format/: clause.rs  ddl.rs  expr.rs  mod.rs  stmt.rs
crates/solite-fmt/src/snapshots/: solite_fmt__tests__alter_table_add_column.snap  solite_fmt__tests__alter_table_drop_column.snap  solite_fmt__tests__alter_table_rename.snap  solite_fmt__tests__alter_table_rename_column.snap  solite_fmt__tests__analyze.snap  solite_fmt__tests__analyze_table.snap  solite_fmt__tests__arithmetic_expressions.snap  solite_fmt__tests__attach_database.snap  solite_fmt__tests__begin_deferred.snap  solite_fmt__tests__begin_exclusive.snap  solite_fmt__tests__begin_immediate.snap  solite_fmt__tests__begin_transaction.snap  solite_fmt__tests__bind_parameters.snap  solite_fmt__tests__bitwise_operators.snap  solite_fmt__tests__blob_literal.snap  solite_fmt__tests__block_comment.snap  solite_fmt__tests__block_comment_before_statement.snap  solite_fmt__tests__collate_expression.snap  solite_fmt__tests__comment_before_create_table.snap  solite_fmt__tests__comment_before_each_statement.snap  solite_fmt__tests__comment_before_first_statement.snap  solite_fmt__tests__comment_before_insert.snap  solite_fmt__tests__comment_between_statements.snap  solite_fmt__tests__comment_blank_line_then_select.snap  solite_fmt__tests__commit.snap  solite_fmt__tests__comparison_operators.snap  solite_fmt__tests__complex_select_with_all_clauses.snap  solite_fmt__tests__config_indent_2_spaces.snap  solite_fmt__tests__config_indent_8_spaces.snap  solite_fmt__tests__config_leading_comma_insert.snap  solite_fmt__tests__config_leading_comma_select.snap  solite_fmt__tests__config_lowercase_create_table.snap  solite_fmt__tests__config_lowercase_insert.snap  solite_fmt__tests__config_lowercase_select.snap  solite_fmt__tests__create_index.snap  solite_fmt__tests__create_index_collate.snap  solite_fmt__tests__create_index_if_not_exists.snap  solite_fmt__tests__create_index_many_columns.snap  solite_fmt__tests__create_index_multiple_columns.snap  solite_fmt__tests__create_index_multiple_with_order.snap  (+181 more)
crates/solite-fmt/tests/: dot_commands.rs
crates/solite-lsp/: AGENTS.md  Cargo.toml
crates/solite-lsp/src/: completions.rs  context.rs  inlay_hints.rs  lib.rs  main.rs  server.rs
crates/solite-lsp/src/tests/: autocomplete.rs  completions.rs  cte.rs  hover.rs  lsp_integration.rs  mod.rs  semantic_tokens.rs
crates/solite-mcp/: Cargo.toml
crates/solite-mcp/src/: lib.rs  sandbox.rs
crates/solite-mdtest/: AGENTS.md  Cargo.toml
crates/solite-mdtest/resources/mdtest/: autocomplete.md  (+3 more)
crates/solite-mdtest/src/: assertions.rs  lib.rs  markers.rs  parser.rs  reporter.rs  runner.rs
crates/solite-mdtest/tests/: mdtest.rs
crates/solite-schema/: AGENTS.md  Cargo.toml
crates/solite-schema/src/: dotcmd.rs  introspect.rs  json.rs  lib.rs  provider.rs
crates/solite-schema/tests/: integration.rs
crates/solite-serve/: Cargo.toml
crates/solite-serve/src/: main.rs
crates/solite-table/: AGENTS.md  Cargo.toml
crates/solite-table/src/: buffer.rs  config.rs  layout.rs  lib.rs  theme.rs  types.rs
solite-cli/: Cargo.toml
solite-cli/src/: bench.rs  cli.rs  docs.rs  errors.rs  main.rs  query.rs  repl.rs  run.rs  snapshot.rs  ui.rs
solite-cli/src/jupyter/: html.rs  jupyer_msg.rs  mod.rs  notebook.rs  server.rs
solite-stdlib/: .gitignore  Cargo.toml  README.md  build.rs  natsort.c  usleep.c
solite-stdlib/sqlite3/: .gitignore  Makefile  solite-stdlib.h
solite-stdlib/src/: ext.rs  lib.rs
solite-stdlib/src/snapshots/: solite_stdlib__tests__stdlib_basic-2.snap  solite_stdlib__tests__stdlib_basic-3.snap  solite_stdlib__tests__stdlib_basic.snap
(+278 files in other folders)
