[package]
name = "solite-cli"
version = "0.0.1-alpha.4"
edition = "2021"
repository = "https://github.com/asg017/solite"

[[bin]]
name = "solite"
path = "src/main.rs"


[dependencies]
clap = "4.4.2"
solite-core = {path="../solite-core"}
solite-stdlib = {path="../solite-stdlib"}
solite-lexer = {path="../solite-lexer"}
rustyline = {version="12.0.0", features = ["derive"]}
bytes = "1.5"
chrono = "0.4.31"
ring = "0.17"
zeromq = { version = "=0.3.3", default-features = false, features = ["tcp-transport", "tokio-runtime"] }
data-encoding = "2.4.0"
futures = "0.3"
anyhow = "1"
serde_json = "1"
serde = {version="1", features=["derive"]}
tokio = { version = "1.32.0", features = ["full"] }
uuid ={version="1.4", features=["v4"]}
tempfile = "3.8.0"

termcolor = "1.3.0"
cli-table = "0.4"
flate2 = "1.0"
zstd = "0.13"
lazy_static = "1.4.0"
csv = "1.3"
serde_with = "3.8.1"
arboard = "3.4.1"
codespan-reporting = "0.11.1"
term_size = "0.3.2"
hex = "0.4.3"
similar = {version="2.7.0", features = ["inline"]}
console = "0.15.10"
pathdiff = "0.2.3"

#[features]
#default = ["jupyter"]
#jupyer = []
