[package]
name = "solite-stdlib"
version = "0.0.1-alpha.1"
edition = "2021"
links = "sqlite"

[dependencies]
sqlite-loadable = "0.0.6-alpha.6"
sqlite-ulid = "0.2.2-alpha.1"
sqlite-regex = "0.2.4-alpha.1"
sqlite-http = {git="https://github.com/asg017/sqlite-http.git", rev="9a738f796ae72513fa150c9c816a8b66da7f50d1"}
#sqlite-lines = {git="https://github.com/asg017/sqlite-lines.git", branch="rust"}
sqlite-lines = {path="../../sqlite-lines"}
sqlite-path = {git="https://github.com/asg017/sqlite-path.git", branch="rust"}
sqlite-xsv = {git="https://github.com/asg017/sqlite-xsv.git", branch="main"}
sqlite-url = {git="https://github.com/asg017/sqlite-url.git", rev="b0d6757139d0b462768aa5e382333437afc2e6d2"}
sqlite-vec = "0.1.6"
# rm until windows build is fixed :(
#sqlite-tg = "0.0.1-alpha.18"
arboard = "3.4.1"
#sqlite-fastrand = "0.2.1"


[build-dependencies]
cc = "1.0"
pkg-config = "0.3"
rusqlite.workspace = true

[dev-dependencies]
rusqlite.workspace = true
insta.workspace = true

[features]
default = ["static"]
static = ["sqlite-loadable/static"]

[lib]
crate-type=["lib", "staticlib", "cdylib"]
