[package]
name = "solite-cli"
version = "0.0.1-alpha.18"
edition = "2021"
repository = "https://github.com/asg017/solite"

[[bin]]
name = "solite"
path = "src/main.rs"


[dependencies]
clap = {version = "4.4.2", features=["derive", "string"]}
solite-core = {path="../solite-core"}
solite-stdlib = {path="../solite-stdlib"}
solite-lexer = {path="../solite-lexer"}
solite-mcp = {path="../solite-mcp"}
rustyline = {version="12.0.0", features = ["derive"]}
futures = "0.3"
anyhow.workspace = true
serde_json = "1"
serde = {version="1", features=["derive"]}
tokio = { version = "1.32.0", features = ["full"] }
uuid = {version="1.4", features=["v4"]}
tempfile = "3.8.0"

termcolor = "1.3.0"
cli-table = "0.4"
lazy_static = "1.4.0"
serde_with = "3.8.1"
codespan-reporting = "0.11.1"
term_size = "0.3.2"
hex = "0.4.3"
similar = {version="2.7.0", features = ["inline"]}
console = "0.15.10"
pathdiff = "0.2.3"
regex = "1.11.1"
indicatif.workspace = true

# solite docs
markdown = "1.0.0-alpha.23"
mdast_util_to_markdown = "0.0.1"
crossterm = "0.29.0"
jiff = "0.2.14"
thiserror = "2.0.12"
statistical = "1.0.0"

runtimelib = { version = "0.25.0", features = ["tokio-runtime"] }
jupyter-protocol = "0.6.0"
nbformat = "0.11.0"
html-builder = "0.5.1"


#[features]
#default = ["jupyter"]
#jupyer = []
[dev-dependencies]
insta.workspace = true
