[package]
name = "solite-core"
#version = "0.1.0"
edition = "2021"

[dependencies]
ropey = "1.6.0"
libsqlite3-sys.workspace = true
indicatif.workspace = true
solite-stdlib = {path="../solite-stdlib"}
thiserror = "1.0"
serde = "1.0.219"
regex = "1.11.1"
anyhow.workspace = true
serde_json = {version="1", features=["preserve_order"]}
arboard = "3.4.1"
flate2 = "1.0"
zstd = "0.13"
csv = "1.3"
jiff = "0.2.15"
statistical = "1.0.0"
pico-args = { version = "0.5.0", features = ["eq-separator"] }
ureq = "3.0.12"
dotenvy = "0.15.7"

[dev-dependencies]
rusqlite.workspace = true
insta.workspace = true
