[package]
name = "solite-mdtest"
version = "0.1.0"
edition = "2021"
description = "Markdown-based test framework for solite SQL LSP"

[dependencies]
solite-lexer = { path = "../solite-lexer" }
solite-parser = { path = "../solite-parser" }
solite-analyzer = { path = "../solite-analyzer" }
solite-ast = { path = "../solite-ast" }
solite-schema = { path = "../solite-schema" }
solite-lsp = { path = "../solite-lsp" }

# Markdown parsing
pulldown-cmark = "0.12"

# Error handling
thiserror = "2"
anyhow = { workspace = true }

# Regex for marker parsing
regex = "1"
once_cell = "1"

# Test output
colored = "2"

# Snapshot testing
insta = { workspace = true, features = ["glob"] }

[dev-dependencies]
datatest-stable = "0.2"

[[test]]
name = "mdtest"
harness = false
