[package]
name = "solite-schema"
version = "0.1.0"
edition = "2021"

[dependencies]
solite-ast = { path = "../solite-ast" }
solite-parser = { path = "../solite-parser" }
solite-analyzer = { path = "../solite-analyzer" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rusqlite = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
