[package]
name = "solite-table"
version = "0.0.1-alpha.24"
edition = "2021"
repository = "https://github.com/asg017/solite"
description = "Table rendering for Solite"

[dependencies]
solite-core = { path = "../solite-core" }
solite-lexer = { path = "../solite-lexer" }
term_size = "0.3.2"
unicode-width = "0.2"

[dev-dependencies]
insta = { workspace = true }
